Skill framework; Units; Data adjustment